Fixed view of top text on mobile

--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ body{
 @media (max-width: 768px) {
 
   * {
-    top: 200px;
+    top: 300px;
   }
   
   .header {
